--- a/views/welcome.erb
+++ b/views/welcome.erb
@@ -5,12 +5,8 @@ Let's play a game of Hangman<br>
 But first, what is your name?<br>
 
 <div class="form-container">
-	<form action="/player_1_name" method="post">
+	<form action="/play_game" method="post">
 	    <input type="text" name="player_1" autofocus="autofocus" placeholder="Enter name">
 	    <input type="submit">
 	</form>
 </div>
-
-
-</p>
-</center>
