--- a/views/player_1_name.erb
+++ b/views/player_1_name.erb
@@ -3,7 +3,7 @@
 Are you ready to play?</p>
 
 <div class="form-container">
-	<form action="/play_game" method="post">
+	<form action="/play_game" method="post" autofocus="autofocus">
 	    <input type="submit">
 	</form>
 </div>
