working on app and making some progress

--- a/views/home.erb
+++ b/views/home.erb
@@ -3,7 +3,8 @@
     <body>
     	<center>
         <div class='header-container'>
-            <h1 id='header'><a href='/'>Magic Hangman</a></h1>
+            <h1 id='header'><img src= "/views/img/title.jpg">
+            <a href='/'>Magic Hangman</a></h1>
         </div>
   <header>
 
@@ -17,7 +18,7 @@
                     <a href='https://en.wikipedia.org/wiki/Hangman_(game)' target='blank'>What is Hangman?</a>      
                 </li>
                 <li>
-                    <a href="/player_1_name">
+                    <a href="/name">
                         Play
                     </a>
                 </li>
