--- a/views/welcome.erb
+++ b/views/welcome.erb
@@ -4,9 +4,7 @@ Let's play a game of Hangman<br>
 <br>
 But first, what is your name?<br>
 
-<div class="form-container">
-	<form action="/play_game" method="post">
-	    <input type="text" name="player_1" autofocus="autofocus" placeholder="Enter name">
+	<form action="name" method="post">
+	    <input type="text" name="name" autofocus="autofocus" placeholder="Enter name">
 	    <input type="submit">
 	</form>
-</div>
