making changes to accommodate entering a word and two players

--- a/views/play_game.erb
+++ b/views/play_game.erb
@@ -9,8 +9,8 @@ You have <%= chances %> chances to solve the puzzle!
 Enter your letter guess below:
 <br>
 <br>
-<form method="post" action="/play_game">
-	<input type="text" name="letter_guess" pattern="[a-z]" maxlength="1" placeholder= "Enter Letter" autofocus="autofocus" required>
+<form method="post" action="play_game">
+	<input type="text" name="letter_guess" placeholder= "Enter Letter" autofocus="autofocus" required>
 	<input type="submit">
 </form>
 <br>
