--- a/views/player_1_name.erb
+++ b/views/player_1_name.erb
@@ -4,7 +4,7 @@ Let's play a game of Hangman<br>
 <br>
 But first, what is your name?<br>
 
-	<form action="name" method="post">
-	    <input type="text" name="name" autofocus="autofocus" placeholder="Enter name">
+	<form action="player_1_name" method="post">
+	    <input type="text" name="player_1_name" autofocus="autofocus" placeholder="Enter name">
 	    <input type="submit">
 	</form>
