--- a/views/home.erb
+++ b/views/home.erb
@@ -2,13 +2,12 @@
 <html lang='en'>
     <body>
     	<center>
-        <div class='header-container'>
-            <h1 id='header'><img src= "/views/img/title.jpg">
-            <a href='/'>Magic Hangman</a></h1>
-        </div>
-  <header>
+          <header>
+            <a>Magic Hangman</a></h1>
+            </header>
 
-            <ul class="textstyle">
+
+
                 <li>
                     <a href="/">
                         Home
@@ -18,12 +17,12 @@
                     <a href='https://en.wikipedia.org/wiki/Hangman_(game)' target='blank'>What is Hangman?</a>      
                 </li>
                 <li>
-                    <a href="/name">
+                    <a href="/player_1_name">
                         Play
                     </a>
                 </li>
-            </ul>
-    </header>
+
+
     </center>
     </body>
 </html>
