--- a/views/play_game.erb
+++ b/views/play_game.erb
@@ -1,15 +1,15 @@
 <center>
- <%= player_name %>, your secret word is <%= correct_guesses %>.
+ <%= player_2_name %>, your secret word is <%= correct_guesses %>.
 <br>
 <br>
-Guessed Letters <%= guessed_letters %><br><br>
+Guessed Letters <%= guessed_letters.to_s %><br><br>
 <br>
-You have <%= chances %> chances to solve the puzzle!
+
 <br>
 Enter your letter guess below:
 <br>
 <br>
-<form method="post" action="play_game">
+<form method="post" action="letter_guess">
 	<input type="text" name="letter_guess" placeholder= "Enter Letter" autofocus="autofocus" required>
 	<input type="submit">
 </form>
