finally working but now have to fine tune!

--- a/views/play_game.erb
+++ b/views/play_game.erb
@@ -1,8 +1,10 @@
 <center>
- <%= player_2_name %>, your secret word is <%= correct_guesses %>.
+ <%= player_2_name %>, your secret word is: <br>
+ <br>
+<%= blank_word %>
 <br>
 <br>
-Guessed Letters <%= guessed_letters.to_s %><br><br>
+Guessed Letters: <%= guessed_letters.to_s %><br><br>
 <br>
 
 <br>
