--- a/views/enter_word.erb
+++ b/views/enter_word.erb
@@ -2,7 +2,7 @@
 	<center>
     <p>Welcome to Magic Hangman!</p>
     <br>
-    <p>Player <span class="word">1</span>, enter your secret word for player 2 to guess</p>
+    <p>Player 1, enter your word for Player 2 to guess:</p>
     <br>
 	<form action="/begin" method="post">
 	    <input type="password" name="word" autofocus="autofocus" placeholder="Secret Word">
