--- a/views/game_over.erb
+++ b/views/game_over.erb
@@ -4,6 +4,6 @@ so you lost.<br>
 <br>
 Your word was <%= word %>
 <br>
-<img class= "loser" src= "/img/eight.jpg" width= "200">
+<img src= "/img/eight.jpg" width= "200">
 <br>
 </center>
